Added Chopper image link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="gallery-item">
-      <img src="images/chopper.jpg" alt="This is a photo of Chopper.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Chopper.jpg" alt="This is a photo of Chopper.">
       <div class="gallery-overlay">
         <div>
             <h3>Tony-tony Chopper</h3>
