Add image link of Franky

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div class="gallery-item">
-      <img src="images/Franky_Anime_Post_Timeskip.jpg" alt="This is a photo of Franky.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Franky_Anime_Post_Timeskip.jpg" alt="This is a photo of Franky.">
       <div class="gallery-overlay">
         <div>
           <h3>Franky</h3>
