Added image link of Luffy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="gallery">
     <div class="gallery-item">
-      <img src="images/monkey-d-luffy-1.jpg" alt="This is a photo of Luffy.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/monkey-d-luffy-1.jpg" alt="This is a photo of Luffy.">
       <div class="gallery-overlay">
         <div>
           <h3>Monkey D. Luffy</h3>
