Added image link of Nami

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="gallery-item">
-      <img src="images/Nami_mirage_tempo.jpg" alt="This is a photo of Nami.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Nami_mirage_tempo.jpg" alt="This is a photo of Nami.">
       <div class="gallery-overlay">
         <div>
           <h3>Nami</h3>
