Add image link of Robin

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="gallery-item">
-      <img src="images/Nico_Robin_Anime_Post_Timeskip.jpg" alt="This is a photo of Robin.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Nico_Robin_Anime_Post_Timeskip.jpg" alt="This is a photo of Robin.">
       <div class="gallery-overlay">
         <div>
           <h3>Nico Robin</h3>
