Add image link of Zoro

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="gallery-item">
-      <img src="images/Roronoa_Zoro_Post_Timeskip.jpg" alt="This is a photo of Zoro.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Roronoa_Zoro_Post_Timeskip.jpg" alt="This is a photo of Zoro.">
       <div class="gallery-overlay">
         <div>
           <h3>Roronoa Zoro</h3>
