Add image link of Ussop

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
     <div class="gallery-item">
-      <img src="images/Usopp_Anime_Post_Timeskip.jpg" alt="This is a photo of Ussop.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Usopp_Anime_Post_Timeskip.jpg" alt="This is a photo of Ussop.">
       <div class="gallery-overlay">
         <div>
           <h3>Ussop</h3>
