Add image link of Jinbe

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </div>
     </div>
     <div class="gallery-item">
-      <img src="images/jinbe.png" alt="This is a photo of Jinbe.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/jinbe.png" alt="This is a photo of Jinbe.">
       <div class="gallery-overlay">
         <div>
           <h3>Jinbe</h3>
