Added image link of Sanji

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="gallery-item">
-      <img src="images/sanji-one-piece.jpg" alt="This is a photo of Sanji.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/sanji-one-piece.jpg" alt="This is a photo of Sanji.">
       <div class="gallery-overlay">
         <div>
           <h3>Sanji Vinsmoke</h3>
