Add new content and change description of Brook

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="gallery-overlay">
         <div>
           <h3>Brook</h3>
-          <h6>Skeleton Musician</h6>
+          <h6>Soul King</h6>
         </div>
       </div>
     </div>
