Add image link of Sunny and Merry

--- a/index.html
+++ b/index.html
@@ -108,7 +108,25 @@
       <div class="gallery-overlay">
         <div>
           <h3>Jinbe</h3>
-          <h6>First son of the sea.</h6>
+          <h6>First son of the sea</h6>
+        </div>
+      </div>
+    </div>
+    <div class="gallery-item">
+      <img src="https://static.wikia.nocookie.net/onepiece/images/c/cd/Going_Merry_Anime_Concept_Art.png" alt="This is a photo of Jinbe.">
+      <div class="gallery-overlay">
+        <div>
+          <h3>Going Merry</h3>
+          <h6>First ship</h6>
+        </div>
+      </div>
+    </div>
+    <div class="gallery-item">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Thousand-Sunny.jpg" alt="This is a photo of Jinbe.">
+      <div class="gallery-overlay">
+        <div>
+          <h3>Thousand Sunny</h3>
+          <h6>Second ship</h6>
         </div>
       </div>
     </div>
