--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
     </div>
     <div class="gallery-item">
-      <img src="https://static.wikia.nocookie.net/onepiece/images/c/cd/Going_Merry_Anime_Concept_Art.png" alt="This is a photo of Jinbe.">
+      <img src="https://static.wikia.nocookie.net/onepiece/images/c/cd/Going_Merry_Anime_Concept_Art.png" alt="This is a photo of Going Merry.">
       <div class="gallery-overlay">
         <div>
           <h3>Going Merry</h3>
@@ -122,7 +122,7 @@
       </div>
     </div>
     <div class="gallery-item">
-      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Thousand-Sunny.jpg" alt="This is a photo of Jinbe.">
+      <img src="https://raw.githubusercontent.com/JenBaldonado/images-sources/Straw-Hats/Thousand-Sunny.jpg" alt="This is a photo of Thousand Sunny.">
       <div class="gallery-overlay">
         <div>
           <h3>Thousand Sunny</h3>
